--- a/Project.toml
+++ b/Project.toml
@@ -4,4 +4,6 @@ authors = ["Mark C. Anderson <anderson.mark.az@gmail.com>"]
 version = "0.1.0"
 
 [deps]
+FFTW = "7a1cc6ca-52ef-59f5-83cd-3a7055c09341"
 Pkg = "44cfe95a-1eb2-52ea-b672-e2afdf69b78f"
+Plots = "91a5bcdd-55d7-5caf-9e0b-520d859cae80"
